--- a/real-progs.ipynb
+++ b/real-progs.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "# smooth their ratings\n",
     "import scipy\n",
-    "SMOOTHING_STD = 0.65\n",
+    "SMOOTHING_STD = 0.85\n",
     "play = player_year_rate['malonka01'] # greendr01 jamesle01 hardeja01 malonka01\n",
     "minY = min(play.keys())\n",
     "maxY = max(play.keys())\n",
@@ -168,17 +168,16 @@
    "source": [
     "r1 = []\n",
     "r2 = []\n",
-    "r5 = []\n",
     "for play in play_year_rateSmooth.values():\n",
     "    for age,r in play.items():\n",
     "        if age-1 in play:\n",
     "            age2 = age-1\n",
-    "            r1.append(play[age]-play[age-1])\n",
+    "            if age2 > 36:\n",
+    "                continue\n",
+    "            r1.append(np.log(play[age]) - np.log(play[age-1]))\n",
     "            r2.append(age2)\n",
-    "            r5.append(play[age-2]-play[age-1] if age-2 in play else 0*play[age])\n",
     "r1 = np.array(r1)\n",
-    "r2 = np.array(r2)\n",
-    "r5 = np.array(r5)"
+    "r2 = np.array(r2)\n"
    ]
   },
   {
@@ -200,8 +199,9 @@
     "age_res = np.array(age_res)\n",
     "for i in range(15):\n",
     "    plt.plot(sorted(np.unique(r2)),age_res[:,i],label=cols[i],c=plt.cm.tab20(i))\n",
-    "plt.xlim(right=35)\n",
-    "plt.legend()"
+    "#plt.xlim(right=36)\n",
+    "plt.legend()\n",
+    "#plt.ylim(0.75,1.25)"
    ]
   },
   {
@@ -212,18 +212,18 @@
    "source": [
     "import sklearn.linear_model as linear_model\n",
     "\n",
-    "TIMES_TO_FIT = 35\n",
+    "TIMES_TO_FIT = 1\n",
     "\n",
     "clf_models = []\n",
     "for i in range(TIMES_TO_FIT):\n",
-    "    clf = linear_model.SGDRegressor('epsilon_insensitive',alpha=1e-5,epsilon=0,max_iter=10000,tol=1e-9)\n",
+    "    clf = linear_model.RidgeCV(np.logspace(-5,5,11),cv=5)#SGDRegressor('epsilon_insensitive',alpha=1e-5,epsilon=0,max_iter=10000,tol=1e-9,eta0=1e-5)\n",
     "    clf.fit(np.repeat(r2,15)[:,None],r1.ravel())\n",
     "    score = clf.score(np.repeat(r2,15)[:,None],r1.ravel())\n",
-    "    clf_models.append((score,clf))\n",
+    "    clf_models.append((score,i,clf))\n",
     "best_model = sorted(clf_models)[-1]\n",
-    "clf = best_model[1]\n",
+    "clf = best_model[2]\n",
     "print(best_model[0])\n",
-    "main_model = (clf.coef_[0] , clf.intercept_[0])"
+    "main_model = (clf.coef_[0] , clf.intercept_)"
    ]
   },
   {
@@ -245,15 +245,15 @@
     "models = []\n",
     "for i in range(r1.shape[1]):\n",
     "    clf_models = []\n",
-    "    for _ in range(TIMES_TO_FIT):\n",
-    "        clf = linear_model.SGDRegressor('epsilon_insensitive',alpha=1e-5,epsilon=0,max_iter=10000,tol=1e-9)\n",
+    "    for j in range(TIMES_TO_FIT):\n",
+    "        clf = linear_model.RidgeCV(np.logspace(-5,5,11),cv=5)#SGDRegressor('epsilon_insensitive',alpha=1e-5,epsilon=0,max_iter=10000,tol=1e-9,eta0=1e-5)\n",
     "        clf.fit(np.array(r2)[:,None],r1[:,i]-(main_model[0]*r2+main_model[1]))\n",
     "        score = clf.score(np.array(r2)[:,None],r1[:,i]-(main_model[0]*r2+main_model[1]))\n",
-    "        clf_models.append((score,clf))\n",
+    "        clf_models.append((score,j,clf))\n",
     "    best_model = sorted(clf_models)[-1]\n",
-    "    clf = best_model[1]\n",
-    "    print(best_model[0])\n",
-    "    models.append((clf.coef_[0],clf.intercept_[0]))"
+    "    clf = best_model[2]\n",
+    "    print(cols[i],best_model[0])\n",
+    "    models.append((clf.coef_[0],clf.intercept_))"
    ]
   },
   {
@@ -266,8 +266,8 @@
     "for i in range(r1.shape[1]):\n",
     "    plt.plot(np.unique(r2),np.unique(r2)*models[i][0]+models[i][1],label=cols[i],c=plt.cm.tab20(i))\n",
     "plt.legend()\n",
-    "plt.xlim(19,34)\n",
-    "plt.ylim(-4,4)\n",
+    "#plt.xlim(19,34)\n",
+    "#plt.ylim(-4,4)\n",
     "plt.grid(True)"
    ]
   },
@@ -279,7 +279,7 @@
    "source": [
     "means_expected = []\n",
     "for i in range(r1.shape[1]):\n",
-    "    means_expected.append(models[i][0]*r2 + models[i][1] + (main_model[0]*r2+main_model[1]) )"
+    "    means_expected.append((models[i][0]*r2 + models[i][1]) * (main_model[0]*r2+main_model[1]) )"
    ]
   },
   {
@@ -310,7 +310,7 @@
     "    plt.imshow(covar)\n",
     "    plt.xticks(np.arange(15),cols,rotation=45)\n",
     "    plt.yticks(np.arange(15),cols)\n",
-    "    plt.title('age={}  max={:.0f}'.format(age,covar.max()))\n",
+    "    plt.title('age={}  max={:.1f}'.format(age,covar.max()))\n",
     "plt.tight_layout(pad=0.1,h_pad=0)\n",
     "plt.gcf().subplots_adjust(hspace=-0.6)"
    ]
@@ -403,7 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dat_print = {cols[i]:tuple(np.round(row,3)) for i,row in enumerate(np.hstack([models,std_models]))}"
+    "dat_print = {cols[i]:tuple(np.round(row,4)) for i,row in enumerate(np.hstack([models,std_models]))}"
    ]
   },
   {
@@ -412,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('{} {},'.format(\"base\",list(np.round(base_model,3))))\n",
+    "print('{} {},'.format(\"base\",list(np.round(base_model,4))))\n",
     "for k,v in dat_print.items():\n",
     "    if k == 'hgt':continue\n",
     "    print('{}: {},'.format(k,list(v)))"
@@ -441,15 +441,6 @@
    "metadata": {},
    "source": [
     "## Model Rookies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p"
    ]
   },
   {
@@ -568,8 +559,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ADD_VAR = 10*np.random.randn(X_hgt.shape[0],COMP)\n",
-    "MUL_VAR = 1+0.8*(np.random.rand(X_hgt.shape[0],15)-0.5)\n",
+    "ADD_VAR = np.array([15.5,16.1,8.5])*np.random.randn(X_hgt.shape[0],COMP)\n",
+    "MUL_VAR = 1+0.33*(np.random.rand(X_hgt.shape[0],15)-0.5)\n",
     "pred_vec = ((ADD_VAR+pred_res) @ clf_pca.components_[:COMP,:]) + clf_pca.mean_\n",
     "pred_vec *= MUL_VAR"
    ]
@@ -591,10 +582,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = plt.hist(youth[:,1:].mean(1),50,alpha=0.5,density=True)\n",
-    "_ = plt.hist(pred_vec.mean(1),50,alpha=0.5,density=True)\n",
+    "_ = plt.hist(youth[:,1:].mean(1),20,alpha=0.5,density=True)\n",
+    "_ = plt.hist(pred_vec.mean(1),20,alpha=0.5,density=True)\n",
     "print(youth[:,1:].mean(1).std(),pred_vec.mean(1).std())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.subplot(1,2,1)\n",
+    "plt.imshow(np.cov(youth[:,1:],rowvar=False),vmin=-130,vmax=130,cmap='RdBu')\n",
+    "plt.title('real players')\n",
+    "plt.xticks(np.arange(15),cols,rotation=45)\n",
+    "plt.yticks(np.arange(15),cols)\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.imshow(np.cov(pred_vec,rowvar=False),vmin=-130,vmax=130,cmap='RdBu')\n",
+    "plt.title('generated')\n",
+    "plt.xticks(np.arange(15),cols,rotation=45)\n",
+    "_ = plt.yticks(np.arange(15),cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "youth[:,1:].mean(0)-pred_vec.mean(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_f(params):\n",
+    "    #np.random.seed(43)\n",
+    "    ADD_VAR = np.exp(params[:3])*np.random.randn(X_hgt.shape[0],COMP)\n",
+    "    MUL_VAR = 1+np.exp(params[3])*(np.random.rand(X_hgt.shape[0],15)-0.5)\n",
+    "    pred_vec = ((ADD_VAR+pred_res) @ clf_pca.components_[:COMP,:]) + clf_pca.mean_\n",
+    "    pred_vec *= MUL_VAR\n",
+    "\n",
+    "    cov_err = ((np.cov(youth[:,1:],rowvar=False)-np.cov(pred_vec,rowvar=False))**2).mean()\n",
+    "    mean_err = ((np.array(sorted(youth[:,1:].mean(1)))-np.array(sorted(pred_vec.mean(1))))**2).mean()\n",
+    "    mean_err2 = ((youth[:,1:].mean(0)-pred_vec.mean(0))**2).mean()\n",
+    "    return cov_err*mean_err + 10*mean_err2\n",
+    "eval_f(np.log([13.92224771, 15.79709037,  9.23502457,  0.39119916]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cma\n",
+    "es = cma.CMAEvolutionStrategy(np.log([14.59942435, 16.14843682,  8.86842032,  0.38391205]),0.2,{'popsize':20.5})\n",
+    "es.optimize(eval_f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.exp(es.mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
