--- a/real-progs.ipynb
+++ b/real-progs.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "# smooth their ratings\n",
     "import scipy\n",
-    "SMOOTHING_STD = 0.85\n",
+    "SMOOTHING_STD = 1.5\n",
     "play = player_year_rate['malonka01'] # greendr01 jamesle01 hardeja01 malonka01\n",
     "minY = min(play.keys())\n",
     "maxY = max(play.keys())\n",
@@ -457,7 +457,7 @@
     "        continue\n",
     "    yr = p['draftYear']\n",
     "    age = yr-p['bornYear']\n",
-    "    if yr<2020 and yr >= 2000 and (k,yr+1) in ratings and age < 25:# and p['draftPick'] < 45:\n",
+    "    if yr<2020 and yr >= 2000 and (k,yr+1) in ratings and age < 23:# and p['draftPick'] < 45:\n",
     "        youth.append([age] + ratings[(k,yr+1)])\n",
     "        names.append(k)\n",
     "        positions.append(p['pos'])\n",
@@ -559,8 +559,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ADD_VAR = np.array([15.5,16.1,8.5])*np.random.randn(X_hgt.shape[0],COMP)\n",
-    "MUL_VAR = 1+0.33*(np.random.rand(X_hgt.shape[0],15)-0.5)\n",
+    "ADD_VAR = np.array([18,20,10])*np.random.randn(X_hgt.shape[0],COMP)\n",
+    "#ADD_VAR = np.array([12,13,7])*np.random.laplace(size=(X_hgt.shape[0],COMP))\n",
+    "MUL_VAR = np.random.uniform(1-0.22,1+0.20,size=(X_hgt.shape[0],15))\n",
     "pred_vec = ((ADD_VAR+pred_res) @ clf_pca.components_[:COMP,:]) + clf_pca.mean_\n",
     "pred_vec *= MUL_VAR"
    ]
@@ -622,16 +623,24 @@
    "source": [
     "def eval_f(params):\n",
     "    #np.random.seed(43)\n",
-    "    ADD_VAR = np.exp(params[:3])*np.random.randn(X_hgt.shape[0],COMP)\n",
-    "    MUL_VAR = 1+np.exp(params[3])*(np.random.rand(X_hgt.shape[0],15)-0.5)\n",
-    "    pred_vec = ((ADD_VAR+pred_res) @ clf_pca.components_[:COMP,:]) + clf_pca.mean_\n",
-    "    pred_vec *= MUL_VAR\n",
+    "    res = []\n",
+    "    for i in range(35):\n",
+    "        #np.random.seed(142+i)\n",
+    "        #ADD_VAR = np.exp(params[:COMP])*np.random.laplace(size=(X_hgt.shape[0],COMP))\n",
+    "        ADD_VAR = np.exp(params[:COMP])*np.random.randn(X_hgt.shape[0],COMP)\n",
     "\n",
-    "    cov_err = ((np.cov(youth[:,1:],rowvar=False)-np.cov(pred_vec,rowvar=False))**2).mean()\n",
-    "    mean_err = ((np.array(sorted(youth[:,1:].mean(1)))-np.array(sorted(pred_vec.mean(1))))**2).mean()\n",
-    "    mean_err2 = ((youth[:,1:].mean(0)-pred_vec.mean(0))**2).mean()\n",
-    "    return cov_err*mean_err + 10*mean_err2\n",
-    "eval_f(np.log([13.92224771, 15.79709037,  9.23502457,  0.39119916]))\n"
+    "        MUL_VAR = np.random.uniform(1-np.exp(params[COMP]),1+np.exp(params[COMP+1]),size=(X_hgt.shape[0],15))\n",
+    "        pred_vec = ((ADD_VAR+pred_res) @ clf_pca.components_[:COMP,:]) + clf_pca.mean_\n",
+    "        pred_vec *= MUL_VAR\n",
+    "\n",
+    "        N = youth.shape[0]\n",
+    "        cov_err = ((np.cov(youth[:,1:],rowvar=False)-np.cov(pred_vec,rowvar=False))**2).mean()\n",
+    "        mean_err = ((np.array(sorted(youth[:,1:].mean(1)))[N//2:]-np.array(sorted(pred_vec.mean(1)))[N//2:])**2).mean()\n",
+    "        mean_err2 = ((youth[:,1:].mean(0)-pred_vec.mean(0))**2).mean()\n",
+    "        #print(np.sqrt(cov_err),50*mean_err , 10*mean_err2)\n",
+    "        res.append( (cov_err)*mean_err + 5*mean_err2)\n",
+    "    return np.mean(sorted(res)[-10:])\n",
+    "eval_f(np.log([18,20,10,0.22,0.20]))"
    ]
   },
   {
@@ -641,8 +650,8 @@
    "outputs": [],
    "source": [
     "import cma\n",
-    "es = cma.CMAEvolutionStrategy(np.log([14.59942435, 16.14843682,  8.86842032,  0.38391205]),0.2,{'popsize':20.5})\n",
-    "es.optimize(eval_f)"
+    "es = cma.CMAEvolutionStrategy(np.log([18,20,10,0.22,0.20]),0.05,{'popsize':10.5})\n",
+    "#es.optimize(eval_f)"
    ]
   },
   {
@@ -651,7 +660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.exp(es.mean)"
+    "#np.exp(es.mean)"
    ]
   },
   {
