--- a/real-progs.ipynb
+++ b/real-progs.ipynb
@@ -457,7 +457,7 @@
     "        continue\n",
     "    yr = p['draftYear']\n",
     "    age = yr-p['bornYear']\n",
-    "    if yr<2020 and yr >= 2000 and (k,yr+1) in ratings and age < 23:# and p['draftPick'] < 45:\n",
+    "    if yr<2020 and yr >= 2000 and (k,yr+1) in ratings and age < 23 and p['draftPick'] < 45:\n",
     "        youth.append([age] + ratings[(k,yr+1)])\n",
     "        names.append(k)\n",
     "        positions.append(p['pos'])\n",
@@ -550,6 +550,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ovr_weights =  {\n",
+    "        'hgt': 0.21 ,\n",
+    "        'stre':0.0903,\n",
+    "        'spd':0.143,\n",
+    "        'jmp':0.0436,\n",
+    "        'endu':0.0346,\n",
+    "        'ins':0.01,\n",
+    "        'dnk':0.0312,\n",
+    "        'ft':0.0291,\n",
+    "        'tp':0.107,\n",
+    "        'oiq':0.0895 ,\n",
+    "        'diq':0.0760 ,\n",
+    "        'drb':0.105 ,\n",
+    "        'pss':0.0785 ,\n",
+    "        'fg':0.01,\n",
+    "        'reb':0.0448,}\n",
+    "ovr_v = np.array([ovr_weights[cols[i]] for i in range(len(cols))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "clf_pca.components_[:COMP,:]"
    ]
   },
@@ -559,9 +584,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ADD_VAR = np.array([18,20,10])*np.random.randn(X_hgt.shape[0],COMP)\n",
+    "ADD_VAR = np.array([15.4,17.7,9.3])*np.random.randn(X_hgt.shape[0],COMP)\n",
     "#ADD_VAR = np.array([12,13,7])*np.random.laplace(size=(X_hgt.shape[0],COMP))\n",
-    "MUL_VAR = np.random.uniform(1-0.22,1+0.20,size=(X_hgt.shape[0],15))\n",
+    "MUL_VAR = np.random.uniform(1-0.23,1+0.23,size=(X_hgt.shape[0],15))\n",
     "pred_vec = ((ADD_VAR+pred_res) @ clf_pca.components_[:COMP,:]) + clf_pca.mean_\n",
     "pred_vec *= MUL_VAR"
    ]
@@ -583,8 +608,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = plt.hist(youth[:,1:].mean(1),20,alpha=0.5,density=True)\n",
-    "_ = plt.hist(pred_vec.mean(1),20,alpha=0.5,density=True)\n",
+    "_ = plt.hist((youth[:,1:]*ovr_v).sum(1)-6,20,alpha=0.5,density=True)\n",
+    "_ = plt.hist((ovr_v*pred_vec).sum(1)-6,20,alpha=0.5,density=True)\n",
     "print(youth[:,1:].mean(1).std(),pred_vec.mean(1).std())"
    ]
   },
@@ -625,7 +650,7 @@
     "    #np.random.seed(43)\n",
     "    res = []\n",
     "    for i in range(35):\n",
-    "        #np.random.seed(142+i)\n",
+    "        #np.random.seed(42+i)\n",
     "        #ADD_VAR = np.exp(params[:COMP])*np.random.laplace(size=(X_hgt.shape[0],COMP))\n",
     "        ADD_VAR = np.exp(params[:COMP])*np.random.randn(X_hgt.shape[0],COMP)\n",
     "\n",
@@ -635,12 +660,12 @@
     "\n",
     "        N = youth.shape[0]\n",
     "        cov_err = ((np.cov(youth[:,1:],rowvar=False)-np.cov(pred_vec,rowvar=False))**2).mean()\n",
-    "        mean_err = ((np.array(sorted(youth[:,1:].mean(1)))[N//2:]-np.array(sorted(pred_vec.mean(1)))[N//2:])**2).mean()\n",
+    "        mean_err = ((np.array(sorted((ovr_v*youth[:,1:]).sum(1)))[N//2:]-np.array(sorted((ovr_v*pred_vec).sum(1)))[N//2:])**2).mean()\n",
     "        mean_err2 = ((youth[:,1:].mean(0)-pred_vec.mean(0))**2).mean()\n",
     "        #print(np.sqrt(cov_err),50*mean_err , 10*mean_err2)\n",
     "        res.append( (cov_err)*mean_err + 5*mean_err2)\n",
     "    return np.mean(sorted(res)[-10:])\n",
-    "eval_f(np.log([18,20,10,0.22,0.20]))"
+    "eval_f(np.log([15.61561797, 17.75709166,  9.43354365,  0.23711597,  0.23264592]))"
    ]
   },
   {
@@ -650,8 +675,8 @@
    "outputs": [],
    "source": [
     "import cma\n",
-    "es = cma.CMAEvolutionStrategy(np.log([18,20,10,0.22,0.20]),0.05,{'popsize':10.5})\n",
-    "#es.optimize(eval_f)"
+    "es = cma.CMAEvolutionStrategy(np.log([15.61561797, 17.75709166,  9.43354365,  0.23711597,  0.23264592]),0.01,{'popsize':10.5})\n",
+    "es.optimize(eval_f)"
    ]
   },
   {
@@ -660,7 +685,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#np.exp(es.mean)"
+    "np.exp(es.mean)"
    ]
   },
   {
