--- a/real-progs.ipynb
+++ b/real-progs.ipynb
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from scipy.spatial.distance import pdist, cdist"
    ]
   },
   {
@@ -119,9 +120,11 @@
    "outputs": [],
    "source": [
     "# smooth their ratings\n",
+    "plt.style.use('fivethirtyeight')\n",
     "import scipy\n",
-    "SMOOTHING_STD = 1.5\n",
-    "play = player_year_rate['malonka01'] # greendr01 jamesle01 hardeja01 malonka01\n",
+    "SMOOTHING_STD = 1.1\n",
+    "key = 'malonka01' # greendr01 jamesle01 hardeja01 malonka01\n",
+    "play = player_year_rate[key] \n",
     "minY = min(play.keys())\n",
     "maxY = max(play.keys())\n",
     "res = []\n",
@@ -132,9 +135,9 @@
     "\n",
     "i = 8\n",
     "plt.plot(range(minY,maxY+1),np.array(res)[:,i],label='orig')\n",
-    "plt.plot(range(minY,maxY+1),scipy.ndimage.gaussian_filter1d(np.array(res).astype(float),SMOOTHING_STD,mode='nearest',axis=0,truncate=10)[:,i],label='new')\n",
+    "plt.plot(range(minY,maxY+1),scipy.ndimage.gaussian_filter1d(np.array(res).astype(float),SMOOTHING_STD,mode='nearest',axis=0,truncate=10)[:,i],label='smooth')\n",
     "plt.legend()\n",
-    "plt.title(cols[i])"
+    "plt.title(key + ' ' + cols[i])"
    ]
   },
   {
@@ -199,9 +202,9 @@
     "age_res = np.array(age_res)\n",
     "for i in range(15):\n",
     "    plt.plot(sorted(np.unique(r2)),age_res[:,i],label=cols[i],c=plt.cm.tab20(i))\n",
-    "#plt.xlim(right=36)\n",
+    "plt.xlim(right=35)\n",
     "plt.legend()\n",
-    "#plt.ylim(0.75,1.25)"
+    "plt.ylim(-0.2,0.2)"
    ]
   },
   {
@@ -409,7 +412,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "print('{} {},'.format(\"base\",list(np.round(base_model,4))))\n",
@@ -449,6 +454,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "models_np = np.array(models)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "youth = []\n",
     "names = []\n",
     "positions = []\n",
@@ -457,8 +471,12 @@
     "        continue\n",
     "    yr = p['draftYear']\n",
     "    age = yr-p['bornYear']\n",
-    "    if yr<2020 and yr >= 2000 and (k,yr+1) in ratings and age < 23 and p['draftPick'] < 45:\n",
-    "        youth.append([age] + ratings[(k,yr+1)])\n",
+    "    if yr<2020 and yr >= 2000 and (k,yr+1) in ratings and age <= 23 and p['draftPick'] <= 45:\n",
+    "        update = main_model[0]*age+main_model[1]\n",
+    "        rt = ratings[(k,yr+1)]\n",
+    "        rt_n = np.log(np.array(rt)+0.1) - ( (main_model[0]*age+main_model[1]) + (models_np[:,0]*age + models_np[:,1]) )\n",
+    "        rt_n = np.clip(np.exp(rt_n),1,100)\n",
+    "        youth.append([age] + list(rt_n))\n",
     "        names.append(k)\n",
     "        positions.append(p['pos'])\n",
     "youth = np.array(youth)"
@@ -501,6 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fix_mean = np.array([5., 0., 0., 5., 0., 0., 0., 0., 0., 5., 0., 0., 0., 0., 0.])\n",
     "for c,v in zip(cols,np.round(clf_pca.mean_,1)):\n",
     "    print(c,':',v,',')"
    ]
@@ -522,6 +541,11 @@
    "source": [
     "COMP =3\n",
     "hgt = youth[:,1+cols.index('hgt')]\n",
+    "plt.hist(hgt,25,density=True)\n",
+    "rand_hgt = np.random.randn(5000)*hgt.std() + hgt.mean()\n",
+    "plt.hist(rand_hgt,25,alpha=0.5,density=True)\n",
+    "f_hgt = np.array(list(hgt) + list(rand_hgt))\n",
+    "\n",
     "X_hgt = hgt[:,None]# np.vstack([hgt,hgt**2]).T\n",
     "pred_res = []\n",
     "hgt_models = []\n",
@@ -529,7 +553,7 @@
     "    clf = linear_model.RidgeCV(cv=3,alphas=np.logspace(-5,3,9))\n",
     "    clf.fit(X_hgt,emb[:,i])\n",
     "    clf_s = clf.score( X_hgt,emb[:,i])\n",
-    "    pred_res.append(clf.predict(X_hgt))\n",
+    "    pred_res.append(clf.predict(f_hgt[:,None]))\n",
     "    print(clf_s)\n",
     "    hgt_models.append(list(clf.coef_) + [clf.intercept_])\n",
     "pred_res = np.array(pred_res).T"
@@ -550,31 +574,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ovr_weights =  {\n",
-    "        'hgt': 0.21 ,\n",
-    "        'stre':0.0903,\n",
-    "        'spd':0.143,\n",
-    "        'jmp':0.0436,\n",
-    "        'endu':0.0346,\n",
-    "        'ins':0.01,\n",
-    "        'dnk':0.0312,\n",
-    "        'ft':0.0291,\n",
-    "        'tp':0.107,\n",
-    "        'oiq':0.0895 ,\n",
-    "        'diq':0.0760 ,\n",
-    "        'drb':0.105 ,\n",
-    "        'pss':0.0785 ,\n",
-    "        'fg':0.01,\n",
-    "        'reb':0.0448,}\n",
-    "ovr_v = np.array([ovr_weights[cols[i]] for i in range(len(cols))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "clf_pca.components_[:COMP,:]"
    ]
   },
@@ -584,22 +583,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ADD_VAR = np.array([15.4,17.7,9.3])*np.random.randn(X_hgt.shape[0],COMP)\n",
-    "#ADD_VAR = np.array([12,13,7])*np.random.laplace(size=(X_hgt.shape[0],COMP))\n",
-    "MUL_VAR = np.random.uniform(1-0.23,1+0.23,size=(X_hgt.shape[0],15))\n",
-    "pred_vec = ((ADD_VAR+pred_res) @ clf_pca.components_[:COMP,:]) + clf_pca.mean_\n",
-    "pred_vec *= MUL_VAR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "abs(pred_vec - youth[:,1:]).mean(0)"
+    "ovr_weights =  {'diq': 0.093,\n",
+    " 'dnk': 0.0424,\n",
+    " 'drb': 0.0968,\n",
+    " 'endu': 0.0075,\n",
+    " 'fg': -0.0093,\n",
+    " 'ft': 0.049,\n",
+    " 'hgt': 0.225,\n",
+    " 'ins': -0.0143,\n",
+    " 'jmp': 0.0505,\n",
+    " 'oiq': 0.0971,\n",
+    " 'pss': 0.0657,\n",
+    " 'reb': 0.0534,\n",
+    " 'spd': 0.156,\n",
+    " 'stre': 0.0962,\n",
+    " 'tp': 0.105}\n",
+    "ovr_v = np.array([ovr_weights[cols[i]] for i in range(len(cols))])"
    ]
   },
   {
@@ -608,8 +607,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = plt.hist((youth[:,1:]*ovr_v).sum(1)-6,20,alpha=0.5,density=True)\n",
-    "_ = plt.hist((ovr_v*pred_vec).sum(1)-6,20,alpha=0.5,density=True)\n",
+    "ADD_VAR = np.array([13.3,14.9,9.0])*np.random.randn(f_hgt.shape[0],COMP)\n",
+    "MUL_VAR = np.random.uniform(1-0.2,1+0.22,size=(f_hgt.shape[0],15))\n",
+    "pred_vec = ((ADD_VAR+pred_res) @ clf_pca.components_[:COMP,:]) + clf_pca.mean_\n",
+    "pred_vec *= MUL_VAR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[13.3, 14.9, 9.0,  0.2,  0.22]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = plt.hist((youth[:,1:]*ovr_v).sum(1)-6.4,20,alpha=0.5,density=True)\n",
+    "_ = plt.hist((ovr_v*pred_vec).sum(1)-6.4,20,alpha=0.5,density=True)\n",
     "print(youth[:,1:].mean(1).std(),pred_vec.mean(1).std())"
    ]
   },
@@ -646,26 +666,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "v1 = (ovr_v*youth[:,1:]).sum(1)\n",
+    "v2 = (ovr_v*pred_vec).sum(1)\n",
+    "v1s = np.array(sorted(v1)[len(v1)//4:])\n",
+    "v2s = np.array(sorted(v2)[len(v2)//4:])\n",
+    "distM = cdist(v1s[:,None],v2s[:,None])\n",
+    "1e6*distM.min(0).mean()*distM.min(1).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def eval_f(params):\n",
     "    #np.random.seed(43)\n",
     "    res = []\n",
     "    for i in range(35):\n",
     "        #np.random.seed(42+i)\n",
     "        #ADD_VAR = np.exp(params[:COMP])*np.random.laplace(size=(X_hgt.shape[0],COMP))\n",
-    "        ADD_VAR = np.exp(params[:COMP])*np.random.randn(X_hgt.shape[0],COMP)\n",
+    "        ADD_VAR = np.exp(params[:COMP])*np.random.randn(f_hgt.shape[0],COMP)\n",
     "\n",
-    "        MUL_VAR = np.random.uniform(1-np.exp(params[COMP]),1+np.exp(params[COMP+1]),size=(X_hgt.shape[0],15))\n",
+    "        MUL_VAR = np.random.uniform(1-np.exp(params[COMP]),1+np.exp(params[COMP+1]),size=(f_hgt.shape[0],15))\n",
     "        pred_vec = ((ADD_VAR+pred_res) @ clf_pca.components_[:COMP,:]) + clf_pca.mean_\n",
     "        pred_vec *= MUL_VAR\n",
     "\n",
     "        N = youth.shape[0]\n",
     "        cov_err = ((np.cov(youth[:,1:],rowvar=False)-np.cov(pred_vec,rowvar=False))**2).mean()\n",
-    "        mean_err = ((np.array(sorted((ovr_v*youth[:,1:]).sum(1)))[N//2:]-np.array(sorted((ovr_v*pred_vec).sum(1)))[N//2:])**2).mean()\n",
+    "\n",
+    "        v1 = (ovr_v*youth[:,1:]).sum(1)\n",
+    "        v2 = (ovr_v*pred_vec).sum(1)\n",
+    "        v1s = np.array(sorted(v1)[len(v1)//4:])\n",
+    "        v2s = np.array(sorted(v2)[len(v2)//4:])\n",
+    "        distM = cdist(v1s[:,None],v2s[:,None])\n",
+    "        mean_err = 1e3*distM.min(0).mean()*distM.min(1).mean()\n",
+    "        \n",
     "        mean_err2 = ((youth[:,1:].mean(0)-pred_vec.mean(0))**2).mean()\n",
     "        #print(np.sqrt(cov_err),50*mean_err , 10*mean_err2)\n",
     "        res.append( (cov_err)*mean_err + 5*mean_err2)\n",
     "    return np.mean(sorted(res)[-10:])\n",
-    "eval_f(np.log([15.61561797, 17.75709166,  9.43354365,  0.23711597,  0.23264592]))"
+    "eval_f(np.log([13.3, 14.9, 9.0,  0.2,  0.22]))"
    ]
   },
   {
@@ -675,7 +716,7 @@
    "outputs": [],
    "source": [
     "import cma\n",
-    "es = cma.CMAEvolutionStrategy(np.log([15.61561797, 17.75709166,  9.43354365,  0.23711597,  0.23264592]),0.01,{'popsize':10.5})\n",
+    "es = cma.CMAEvolutionStrategy(np.log([14.4, 15.8, 10.4,  0.19,  0.21]),0.1,{'popsize':10.5})\n",
     "es.optimize(eval_f)"
    ]
   },
