--- a/real-progs.ipynb
+++ b/real-progs.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRANS_FUNC = lambda x: x**(0.5)#np.sqrt(x)\n",
+    "TRANS_FUNC = lambda x: x**(1/2)#np.sqrt(x)\n",
     "INV_FUNC = lambda x: x**2#x**2\n",
     "r1 = []\n",
     "r2 = []\n",
@@ -216,19 +216,24 @@
    "outputs": [],
    "source": [
     "import sklearn.linear_model as linear_model\n",
-    "\n",
+    "from scipy.stats import pearsonr\n",
     "TIMES_TO_FIT = 1\n",
     "\n",
     "clf_models = []\n",
     "for i in range(TIMES_TO_FIT):\n",
     "    clf = linear_model.RidgeCV(np.logspace(-5,5,11),cv=5)#SGDRegressor('epsilon_insensitive',alpha=1e-5,epsilon=0,max_iter=10000,tol=1e-9,eta0=1e-5)\n",
     "    clf.fit(np.repeat(r2,15)[:,None],r1.ravel())\n",
-    "    score = clf.score(np.repeat(r2,15)[:,None],r1.ravel())\n",
+    "    #score = clf.score(np.repeat(r2,15)[:,None],r1.ravel())\n",
+    "    score = pearsonr(clf.predict(np.repeat(r2,15)[:,None]),r1.ravel())\n",
     "    clf_models.append((score,i,clf))\n",
-    "best_model = sorted(clf_models)[-1]\n",
+    "best_model = sorted(clf_models)[0]\n",
     "clf = best_model[2]\n",
     "print(best_model[0])\n",
-    "main_model = (clf.coef_[0] , clf.intercept_) # 0.0855008819536307"
+    "main_model = (clf.coef_[0] , clf.intercept_) # 0.0855008819536307 # 0.003181372399186653\n",
+    "# (0.28535187287328784, 0.0) linear\n",
+    "# (0.27993511134791604, 0.0) log/exp\n",
+    "# (0.2882236878163602, 0.0) squared\n",
+    "# (0.28735272142114926, 0.0) cubed"
    ]
   },
   {
@@ -537,10 +542,10 @@
     "from sklearn.decomposition import PCA\n",
     "\n",
     "s1 = (youth[:,1:]*ovr_v).sum(1)\n",
-    "s1 = s1 > np.median(s1)\n",
+    "s1 = s1 > 0*np.median(s1)\n",
     "\n",
     "clf_pca = PCA(whiten =False)#TSNE(perplexity=55)\n",
-    "clf_pca.fit(rand_p)\n",
+    "clf_pca.fit(youth[:,1:])\n",
     "emb = clf_pca.transform(youth[s1,1:].astype(np.float32))"
    ]
   },
@@ -592,9 +597,9 @@
     "hgt_models = []\n",
     "for i in range(COMP):\n",
     "    clf = linear_model.RidgeCV(cv=3,alphas=np.logspace(-5,3,9))\n",
-    "    clf.fit(X_hgt/50,emb[:,i])\n",
-    "    clf_s = clf.score( X_hgt/50,emb[:,i])\n",
-    "    pred_res.append(clf.predict(f_hgt[:,None]/50))\n",
+    "    clf.fit(X_hgt,emb[:,i])\n",
+    "    clf_s = clf.score( X_hgt,emb[:,i])\n",
+    "    pred_res.append(clf.predict(f_hgt[:,None]))\n",
     "    print(clf_s)\n",
     "    hgt_models.append(list(clf.coef_) + [clf.intercept_])\n",
     "pred_res = np.array(pred_res).T"
@@ -616,6 +621,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.imshow(clf_pca.components_[:COMP,:],cmap='RdBu',vmin=-0.5,vmax=0.5)\n",
+    "_ = plt.xticks(np.arange(15),cols,rotation=45)\n",
     "clf_pca.components_[:COMP,:]"
    ]
   },
@@ -625,13 +632,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set1 = np.array([6.8, 17.0 , 2.8])\n",
-    "set2 = np.array([  6.3, -15.8 ,  -2.4])\n",
-    "set3 = np.array([0.8, 0.41])\n",
+    "set1 = np.array([8.9, 19.9, 7.8])\n",
+    "set2 = np.array([  -0.77, -11.06 ,  1.77])\n",
+    "set3 = np.array([0.81, 0.41])\n",
     "ADD_VAR = set1*(np.random.randn(f_hgt.shape[0],COMP))+set2\n",
     "MUL_VAR = np.random.uniform(set3[0],set3[0]+set3[1],size=(f_hgt.shape[0],15))\n",
     "pred_vec = ((ADD_VAR+pred_res) @ clf_pca.components_[:COMP,:]) + clf_pca.mean_ \n",
-    "pred_vec *= MUL_VAR"
+    "pred_vec *= MUL_VAR\n",
+    "pred_vec[:,cols.index('hgt')] = f_hgt\n"
    ]
   },
   {
@@ -640,7 +648,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(pred_vec.ravel())"
+    "plt.hist(pred_vec.ravel(),50,alpha=0.5,density=True)\n",
+    "_= plt.hist(youth[:,1:].ravel(),50,alpha=0.5,density=True)"
    ]
   },
   {
@@ -668,7 +677,7 @@
    "source": [
     "_ = plt.hist((youth[:,1:]*ovr_v).sum(1)-6.4,20,alpha=0.5,density=True,label='rpd')\n",
     "_ = plt.hist((pred_vec*ovr_v).sum(1)-6.4,20,alpha=0.5,density=True,label='gen')\n",
-    "#_ = plt.hist((pV*ovr_v).sum(1)-6.4,20,alpha=0.5,density=True,label='beta')\n",
+    "#_ = plt.hist((beta_p2*ovr_v).sum(1)-6.4,20,alpha=0.5,density=True,label='beta')\n",
     "\n",
     "plt.legend()\n",
     "print(youth[:,1:].mean(1).std(),pred_vec.mean(1).std())"
@@ -739,7 +748,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "youth[:,1:].mean(0)-pred_vec.mean(0),youth[s1,1:].mean(0)-pred_vec[s2].mean(0)"
+    "[(abs(_).mean(),abs(_).max()) for _ in [youth[:,1:].mean(0)-pred_vec.mean(0),youth[s1,1:].mean(0)-pred_vec[s2].mean(0),youth[s1,1:].std(0)-pred_vec[s2].std(0)]]"
    ]
   },
   {
@@ -777,13 +786,14 @@
     "    set3 = np.exp(params[COMP:COMP+2])\n",
     "    res = []\n",
     "    #print(set1,set2,set3)\n",
-    "    for i in range(30):\n",
-    "        #np.random.seed(42+i)\n",
+    "    for i in range(60):\n",
+    "        np.random.seed(242+i)\n",
     "        ADD_VAR = set1*(np.random.randn(f_hgt.shape[0],COMP))+set2\n",
     "\n",
     "        MUL_VAR = np.random.uniform(set3[0],set3[0]+set3[1],size=(f_hgt.shape[0],15))\n",
     "        pred_vec = ((ADD_VAR+pred_res) @ clf_pca.components_[:COMP,:]) + clf_pca.mean_ \n",
     "        pred_vec *= MUL_VAR\n",
+    "        pred_vec[:,cols.index('hgt')] = f_hgt\n",
     "        N = youth.shape[0]\n",
     "        # filter to only the top half with good stats\n",
     "        s1 = (youth[:,1:]*ovr_v).sum(1)\n",
@@ -819,16 +829,16 @@
     "        \n",
     "        mean_err2 = ((youth[s1,1:].mean(0)-pred_vec[s2].mean(0))**2).sum()\n",
     "        mean_err3 = ((youth[:,1:].mean(0)-pred_vec.mean(0))**2).sum()\n",
+    "        std_err1 = ((youth[s1,1:].std(0)-pred_vec[s2].std(0))**2).sum()\n",
+    "        std_err2 = ((youth[:,1:].std(0)-pred_vec.std(0))**2).sum()\n",
     "\n",
-    "        res.append( cov_err*mean_err*mean_err2*(mean_err3**0.1)*(cov_err2**0.1 )) # *mean_err3*cov_err2\n",
+    "        res.append( std_err1*(std_err2**0.1)*cov_err*mean_err*mean_err2*(mean_err3**0.1)*(cov_err2**0.1 )) # *mean_err3*cov_err2\n",
     "        if np.isnan(res[-1]):\n",
     "            return 1e20\n",
-    "    return np.mean(sorted(res)) + np.linalg.norm(set2)#,(pred_vec*ovr_v).sum(1)\n",
+    "    return np.mean(sorted(res)) -10*set3[0]+10*set3[1] -np.sum(set1)+ np.linalg.norm(set2)\n",
     "\n",
-    "x0 = np.array([  2.19436338,   3.04949147,   2.22018464,  -0.16138667,\n",
-    "        -1.07208691,   7.24289198, -17.743153  ,  -3.24956405])\n",
-    "x0 = np.array([  1.9164112 ,   2.83613327,   1.03196698,  -0.22193419,\n",
-    "        -0.89973606,   6.30860687, -15.85189416,  -2.357738  ])\n",
+    "x0 = np.array([  2.18455945,   2.99055438,   2.05511653,  -0.2050731 ,\n",
+    "        -0.88629717,  -0.76933933, -11.05606385,   1.76523402])\n",
     "eval_f(x0)\n",
     "#plt.hist(eval_f(x0)[1],20,alpha=0.5,density=True)\n",
     "#plt.hist((ovr_v*youth[:,1:]).sum(1),20,density=True,alpha=0.5)"
@@ -841,7 +851,7 @@
    "outputs": [],
    "source": [
     "import cma\n",
-    "es = cma.CMAEvolutionStrategy(x0,1,{'popsize':25.5})\n",
+    "es = cma.CMAEvolutionStrategy(x0,0.5,{'popsize':25.5})\n",
     "es.optimize(eval_f)"
    ]
   },
@@ -851,191 +861,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "es.mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "es.best.x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('500_year.json','rb') as  fp:\n",
-    "    rand_data = json.load(fp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rand_p = []\n",
+    "with open('beta_t.json','rb') as  fp:\n",
+    "    rand_data = json.load(fp)\n",
+    "beta_p2 = []\n",
     "for p in rand_data['players']:\n",
     "    if p['draft']['year'] != p['ratings'][0]['season']:\n",
     "        continue\n",
-    "    rt = np.array([p['ratings'][0][_] for _ in cols])\n",
-    "    rand_p.append(rt)\n",
-    "rand_p = np.array(rand_p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.subplot(1,2,1)\n",
-    "plt.imshow(np.cov(rand_p,rowvar=False),vmin=-130,vmax=130,cmap='RdBu')\n",
-    "plt.title('random players')\n",
-    "plt.xticks(np.arange(15),cols,rotation=45)\n",
-    "plt.yticks(np.arange(15),cols)\n",
-    "plt.subplot(1,2,2)\n",
-    "plt.imshow(np.cov(pred_vec,rowvar=False),vmin=-130,vmax=130,cmap='RdBu')\n",
-    "plt.title('generated')\n",
-    "plt.xticks(np.arange(15),cols,rotation=45)\n",
-    "_ = plt.yticks(np.arange(15),cols)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def eval_f2(params):\n",
-    "    #np.random.seed(43)\n",
-    "    set1 = np.exp(params[:COMP])\n",
-    "    set2 = np.array(params[-COMP:])\n",
-    "    set3 = np.exp(params[COMP:COMP+2])\n",
-    "    res = []\n",
-    "    #print(set1,set2,set3)\n",
-    "    for i in range(15):\n",
-    "        #np.random.seed(42+i)\n",
-    "        ADD_VAR = set1*(np.random.randn(f_hgt.shape[0],COMP))+set2\n",
-    "\n",
-    "        MUL_VAR = np.random.uniform(set3[0],set3[0]+set3[1],size=(f_hgt.shape[0],15))\n",
-    "        pred_vec = ((ADD_VAR+pred_res) @ clf_pca.components_[:COMP,:]) + clf_pca.mean_ \n",
-    "        pred_vec *= MUL_VAR\n",
-    "        N = youth.shape[0]\n",
-    "        # filter to only the top half with good stats\n",
-    "        \n",
-    "        cov_err = ((np.cov(rand_p,rowvar=False)-np.cov(pred_vec,rowvar=False))**2).mean()\n",
-    "\n",
-    "        v1 = (ovr_v*rand_p).sum(1)\n",
-    "        v2 = (ovr_v*pred_vec).sum(1)\n",
-    "        \n",
-    "        tb = int(np.ceil(v1.max()))\n",
-    "        bb = int(np.floor(v1.min()))\n",
-    "        sN = tb-bb\n",
-    "        hist_set1 = np.linspace(bb,tb,sN)\n",
-    "\n",
-    "        tb = int(np.ceil(v2.max()))\n",
-    "        bb = int(np.floor(v2.min()))\n",
-    "        sN = tb-bb\n",
-    "        hist_set2 = np.linspace(bb,tb,sN)\n",
-    "        \n",
-    "        h1 = np.histogram(v1,hist_set1,density=True)[0]+1e-6\n",
-    "        h2 = np.histogram(v2,hist_set1,density=True)[0]+1e-6\n",
-    "        kl1 = (np.log(h1/h2)*h1).sum()\n",
-    "        kl2 = (np.log(h2/h1)*h2).sum()\n",
-    "        h1 = np.histogram(v1,hist_set2,density=True)[0]+1e-6\n",
-    "        h2 = np.histogram(v2,hist_set2,density=True)[0]+1e-6\n",
-    "        kl12 = (np.log(h1/h2)*h1).sum()\n",
-    "        kl22 = (np.log(h2/h1)*h2).sum()\n",
-    "        mean_err = kl1+kl2+kl12+kl22\n",
-    "        \n",
-    "        mean_err2 = ((rand_p.mean(0)-pred_vec.mean(0))**2).sum()\n",
-    "\n",
-    "        res.append( cov_err*mean_err*mean_err2) # *mean_err3*cov_err2\n",
-    "        if np.isnan(res[-1]):\n",
-    "            return 1e20\n",
-    "    return np.mean(sorted(res)) + np.linalg.norm(set2)#,(pred_vec*ovr_v).sum(1)\n",
-    "\n",
-    "x0 = np.array([  2.72704818,   2.99896952,   2.62496367,  -0.65223965,\n",
-    "        -0.25688335,   9.36065777, -20.51659357,  -1.6169553 ])\n",
-    "x0 = np.array([  2.72602483,   3.08797479,   2.39383417,  -0.17376267,\n",
-    "        -1.1442454 , -18.6830708 , -32.42043351,   0.10711917])\n",
-    "eval_f2(x0)\n",
-    "#plt.hist(eval_f(x0)[1],20,alpha=0.5,density=True)\n",
-    "#plt.hist((ovr_v*youth[:,1:]).sum(1),20,density=True,alpha=0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cma\n",
-    "es = cma.CMAEvolutionStrategy(x0,2,{'popsize':25.5})\n",
-    "es.optimize(eval_f2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "es.best.x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "set1 = np.array([15.3, 21.9, 11.0])\n",
-    "set2 = np.array([  -18.7, -32.4 ,  -0.11])\n",
-    "set3 = np.array([0.84, 0.32])\n",
-    "ADD_VAR = set1*(np.random.randn(f_hgt.shape[0],COMP))+set2\n",
-    "MUL_VAR = np.random.uniform(set3[0],set3[0]+set3[1],size=(f_hgt.shape[0],15))\n",
-    "pred_vec2 = ((ADD_VAR+pred_res) @ clf_pca.components_[:COMP,:]) + clf_pca.mean_ \n",
-    "pred_vec2 *= MUL_VAR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.subplot(1,2,1)\n",
-    "plt.imshow(np.cov(rand_p,rowvar=False),vmin=-130,vmax=130,cmap='RdBu')\n",
-    "plt.title('real players')\n",
-    "plt.xticks(np.arange(15),cols,rotation=45)\n",
-    "plt.yticks(np.arange(15),cols)\n",
-    "plt.subplot(1,2,2)\n",
-    "plt.imshow(np.cov(pred_vec2,rowvar=False),vmin=-130,vmax=130,cmap='RdBu')\n",
-    "plt.title('generated')\n",
-    "plt.xticks(np.arange(15),cols,rotation=45)\n",
-    "_ = plt.yticks(np.arange(15),cols)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_ = plt.hist((rand_p*ovr_v).sum(1)-6.4,20,alpha=0.5,density=True,label='current')\n",
-    "_ = plt.hist((pred_vec2*ovr_v).sum(1)-6.4,20,alpha=0.5,density=True,label='beta (alt settings)')\n",
-    "_ = plt.hist((pred_vec*ovr_v).sum(1)-6.4,20,alpha=0.5,density=True,label='beta')\n",
-    "\n",
-    "#_ = plt.hist((pV*ovr_v).sum(1)-6.4,20,alpha=0.5,density=True,label='beta')\n",
-    "\n",
-    "plt.legend()"
+    "    #for rt1 in p['ratings']:\n",
+    "    rt1 = p['ratings'][0]\n",
+    "    beta_p2.append(np.array([rt1[_] for _ in cols]))\n",
+    "beta_p2 = np.array(beta_p2)"
    ]
   },
   {
