--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -485,7 +485,7 @@
     "def just_a_thing(qrange):\n",
     "    #Xn = np.nan_to_num(np.array(player_vectors))\n",
     "    # tuned this to get roughly 8-12 players at 70 or above. Which seemed like normal for a league\n",
-    "    scalerX2 = preprocessing.RobustScaler(quantile_range=tuple(sorted(qrange)))\n",
+    "    scalerX2 = preprocessing.RobustScaler(quantile_range=tuple(sorted(np.clip(qrange,1,99))))\n",
     "\n",
     "    #scalerX2 = scalerX\n",
     "    Xn_s = fexp.transform(np.nan_to_num(Xn))\n",
@@ -509,18 +509,24 @@
     "    if True:\n",
     "        ratings[:predict.shape[0]] = ratings[:predict.shape[0]]*c + (1-c)*np.repeat(np.array(replacement_player_mean_r).reshape((-1,1)),predict.shape[0],1).T\n",
     "    \n",
-    "    est_hist = np.histogram((ratings*ovr_v).sum(1),bins,density=True)[0] + 1e-9\n",
+    "    est_hist = np.histogram((ratings*ovr_v).sum(1),bins,density=True)[0] + 1e-6\n",
     "    \n",
     "    kl1 = est_hist * np.log(est_hist/base_hist)\n",
     "    kl2 = base_hist * np.log(base_hist/est_hist)\n",
     "    \n",
-    "    est_hist2 = np.histogram(ratings.ravel(),bins,density=True)[0] + 1e-9\n",
+    "    est_hist2 = np.histogram(ratings.ravel(),bins,density=True)[0] + 1e-6\n",
     "    \n",
     "    kl3 = est_hist2 * np.log(est_hist2/base_hist2)\n",
     "    kl4 = base_hist2 * np.log(base_hist2/est_hist2)\n",
-    "    return kl1.sum() + kl2.sum()  + kl3.sum()  + kl4.sum()\n",
-    "qrange_init =[30.5, 43.3] # don't ask me why. 30/70 usually converges here\n",
-    "just_a_thing(qrange_init)"
+    "    \n",
+    "    covar_err = abs((np.cov(ratings.T)-np.cov(y.T)).ravel()).sum()**0.5\n",
+    "    mean_err = abs(ratings.mean(0)-y.mean(0)).sum()**0.5\n",
+    "    ovr_err = (kl1.sum()+kl2.sum())**0.2\n",
+    "    #print(ovr_err,covar_err,mean_err)\n",
+    "    return ovr_err*covar_err*mean_err  #+ kl3.sum()  + kl4.sum()\n",
+    "qrange_init =[2,72] # don't ask me why. seems to work fine and where it typically converges\n",
+    "just_a_thing(qrange_init)\n",
+    "\n"
    ]
   },
   {
@@ -530,9 +536,17 @@
    "outputs": [],
    "source": [
     "import cma\n",
-    "es = cma.CMAEvolutionStrategy(qrange_init,5,{'popsize':20})\n",
-    "es.optimize(just_a_thing)\n",
-    "qrange = es.best.x\n",
+    "es = cma.CMAEvolutionStrategy(qrange_init,1,{'popsize':10,'maxfevals':200})\n",
+    "es.optimize(just_a_thing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qrange = sorted(np.clip(es.best.x,1,99))\n",
     "qrange,es.best.f"
    ]
   },
@@ -567,6 +581,18 @@
     "# if we want to scale players down based on minutes played to replacement level\n",
     "if True:\n",
     "    ratings[:predict.shape[0]] = ratings[:predict.shape[0]]*c + (1-c)*np.repeat(np.array(replacement_player_mean_r).reshape((-1,1)),predict.shape[0],1).T\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(np.cov(ratings.T))\n",
+    "plt.figure()\n",
+    "plt.imshow(np.cov(y.T))\n",
+    "abs(ratings.mean(0)-y.mean(0)).sum()"
    ]
   },
   {
